[project]
name = "tether"
version = "0.1.0"
description = "Local tethering viewer — live multiple-exposure preview during shoots"
authors = [
    { name = "Logan Wu", email = "logan.wu@burnet.edu.au" }
]
dependencies = [
    "flask>=3.0",
    "flask-cors>=4.0",
    "watchdog>=4.0",
]
requires-python = ">= 3.12"

[tool.rye]
managed = true
virtual = true
dev-dependencies = []

[tool.rye.scripts]
start = { cmd = "python server.py" }
