[project]
name = "tether"
version = "0.1.0"
description = "Local tethering viewer — live multiple-exposure preview during shoots"
authors = [
    { name = "Logan Wu", email = "logan.wu@burnet.edu.au" }
]
dependencies = [
    "flask>=3.0",
    "flask-cors>=4.0",
    "watchdog>=4.0",
    "pillow>=11.0",
    "rawpy>=0.21",
]
requires-python = ">= 3.12"

[tool.rye]
managed = true
virtual = true
dev-dependencies = [
    "pytest>=8.0",
    "piexif>=1.1",
]

[tool.rye.scripts]
start = { cmd = "python server.py" }
test = { cmd = "pytest tests/ -v" }

[tool.pytest.ini_options]
testpaths = ["tests"]
